--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,4 @@
-ConnectionString = mongodb+srv://avarjun360:nja0qAAUz6T6mwAj@clusters.6759h.mongodb.net/?retryWrites=true&w=majority&appName=Clusters
+ConnectionString = mongodb+srv://avarjun360:rbyzGnV1TVtfobPl@clusters.6759h.mongodb.net/Connectify?retryWrites=true&w=majority&appName=Clusters
+
+JWT_Key = "hankusan" # jwt token key
+
