--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
